--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script src="js/sammy-0.7.6.min.js" type="text/javascript"></script>
     <script src="js/json2-2016.10.28.js" type="text/javascript"></script>
     <script src="js/base64.js" type="text/javascript"></script>
+    <script src="js/host.js" type="text/javascript"></script>
     <script src="js/global.js" type="text/javascript"></script>
     <script src="js/main.js" type="text/javascript"></script>
     <script src="js/prefs.js" type="text/javascript"></script>
